--- a/synapseNt/assets/style.css
+++ b/synapseNt/assets/style.css
@@ -583,6 +583,7 @@ ou chrome ou koulchi  */
 }
 
 .error-message {
+  display: none;
   color: white;
   background-color: red;
   padding: 5px 10px;
